# py-babel-match

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: compile.py  pyproject.toml  test_pattern_matching.py  test_pattern_matching.py310.py  test_pattern_matching_compiled.py
py_babel_match/: console.py
py_babel_match/config/: config.py  finder.py
py_babel_match/core/match/: transform.py
